--- a/styles/mobile/common.less
+++ b/styles/mobile/common.less
@@ -1659,6 +1659,11 @@
 
 /* PopOver */
 
+.km-popover-root .km-popup-wrapper
+{
+    position: relative !important;
+}
+
 .km-popup-wrapper,
 .km-modalview-wrapper
 {
@@ -1730,6 +1735,11 @@
     width: 100%;
     height: 100%;
     min-height: 100px;
+}
+
+.km-popover-root .km-view
+{
+    position: relative;
 }
 
 /* ModalView */
